force-app/main/default/objects/DWProduct__c/DWProduct__c.object-meta.xml
<CustomObject>
    <description>Gusmer DW finished goods and resale items</description>
    <label>DWProduct</label>
    <nameField>
        <label>DWProduct Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DWProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>