force-app/main/default/objects/DWProduct__c/fields/COMMODITY_GROUP_CODE__c.field-meta.xml
<CustomField>
    <fullName>COMMODITY_GROUP_CODE__c</fullName>
    <label>COMMODITY_GROUP_CODE</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>