force-app/main/default/objects/DWProduct__c/fields/Custom_Family__c.field-meta.xml
<CustomField>
    <fullName>Custom_Family__c</fullName>
    <label>Custom Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Absorbent Products</fullName>
            </value>
            <value>
                <fullName>Animal Bedding</fullName>
            </value>
            <value>
                <fullName>Calenderboard</fullName>
            </value>
            <value>
                <fullName>Cellu-Stacks</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Colorings</fullName>
            </value>
            <value>
                <fullName>Contitech Hoses</fullName>
            </value>
            <value>
                <fullName>Edible Oil</fullName>
            </value>
            <value>
                <fullName>Enzymes</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Filter Housings/Presses</fullName>
            </value>
            <value>
                <fullName>Filtermass</fullName>
            </value>
            <value>
                <fullName>Filter Paper</fullName>
            </value>
            <value>
                <fullName>Filter Sheets/Pads</fullName>
            </value>
            <value>
                <fullName>Fining Agents</fullName>
            </value>
            <value>
                <fullName>Food Powder Blends</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Lab Services</fullName>
            </value>
            <value>
                <fullName>Malolactic Bacteria</fullName>
            </value>
            <value>
                <fullName>Milled Fiber</fullName>
            </value>
            <value>
                <fullName>Millipore</fullName>
            </value>
            <value>
                <fullName>Molded Device Components</fullName>
            </value>
            <value>
                <fullName>Non-Edible Oil Media(DOF,AMS)</fullName>
            </value>
            <value>
                <fullName>Nutrient</fullName>
            </value>
            <value>
                <fullName>Oak-Mor Granular Oak</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other - Specialty Products</fullName>
            </value>
            <value>
                <fullName>Packed Chromatography Column</fullName>
            </value>
            <value>
                <fullName>Spill Clean Up</fullName>
            </value>
            <value>
                <fullName>Tannins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>