force-app/main/default/objects/DWProduct__c/fields/Custom_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Custom_Supplier__c</fullName>
    <label>Custom Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A &amp; M Industrial</fullName>
            </value>
            <value>
                <fullName>Aber Instruments</fullName>
            </value>
            <value>
                <fullName>AB Vickers Limited</fullName>
            </value>
            <value>
                <fullName>Acadian Seaplants Limited</fullName>
            </value>
            <value>
                <fullName>Accent Control Systems</fullName>
            </value>
            <value>
                <fullName>ACM GmbH</fullName>
            </value>
            <value>
                <fullName>Action Automation &amp; Controls,</fullName>
            </value>
            <value>
                <fullName>Adcor Industries Inc.</fullName>
            </value>
            <value>
                <fullName>AEB Biochemical, USA</fullName>
            </value>
            <value>
                <fullName>Aesys Technologies, LLC</fullName>
            </value>
            <value>
                <fullName>Ahlstrom Filtration, LLC</fullName>
            </value>
            <value>
                <fullName>Airline Hydraulics Corp</fullName>
            </value>
            <value>
                <fullName>Air-Oil Systems</fullName>
            </value>
            <value>
                <fullName>Airoyal Company</fullName>
            </value>
            <value>
                <fullName>Allied Electronics, Inc.</fullName>
            </value>
            <value>
                <fullName>American Society of Brewing Ch</fullName>
            </value>
            <value>
                <fullName>American Tartaric Products, In</fullName>
            </value>
            <value>
                <fullName>Amsco Technology Inc.</fullName>
            </value>
            <value>
                <fullName>Angel Yeast (Hong Kong)Co., LT</fullName>
            </value>
            <value>
                <fullName>Antec, Inc.</fullName>
            </value>
            <value>
                <fullName>API Heat Transfer -</fullName>
            </value>
            <value>
                <fullName>Applied Industrial Technologie</fullName>
            </value>
            <value>
                <fullName>Applied use #50063</fullName>
            </value>
            <value>
                <fullName>Archon Industries, Inc.</fullName>
            </value>
            <value>
                <fullName>Argo International Corporation</fullName>
            </value>
            <value>
                <fullName>Armenta Hose &amp; Rubber Co., Inc</fullName>
            </value>
            <value>
                <fullName>Arobois SA RL</fullName>
            </value>
            <value>
                <fullName>Ascension Industries, Inc.</fullName>
            </value>
            <value>
                <fullName>Atago U.S.A., Inc.</fullName>
            </value>
            <value>
                <fullName>Barnstead International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>