force-app/main/default/objects/DWProduct__c/fields/ITEM__c.field-meta.xml
<CustomField>
    <fullName>ITEM__c</fullName>
    <externalId>true</externalId>
    <label>ITEM</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>