force-app/main/default/objects/DWProduct__c/fields/Manufactured__c.field-meta.xml
<CustomField>
    <fullName>Manufactured__c</fullName>
    <label>Manufactured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absorbent Products</fullName>
            </value>
            <value>
                <fullName>Animal Bedding</fullName>
            </value>
            <value>
                <fullName>Calenderboard</fullName>
            </value>
            <value>
                <fullName>Cellu-Stacks</fullName>
            </value>
            <value>
                <fullName>Edible Oil</fullName>
            </value>
            <value>
                <fullName>Filter Paper</fullName>
            </value>
            <value>
                <fullName>Filter Sheets/Pads</fullName>
            </value>
            <value>
                <fullName>Filtermass</fullName>
            </value>
            <value>
                <fullName>Fining Agents</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Milled Fiber</fullName>
            </value>
            <value>
                <fullName>Non-Edible Oil Media(DOF,AMS)</fullName>
            </value>
            <value>
                <fullName>Nutrient</fullName>
            </value>
            <value>
                <fullName>Oak-Mor Granular Oak</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other - Specialty Products</fullName>
            </value>
            <value>
                <fullName>Spill Clean Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>