force-app/main/default/objects/DWProduct__c/fields/PRODUCT_GROUP__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_GROUP__c</fullName>
    <label>PRODUCT_GROUP</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>