force-app/main/default/objects/DWProduct__c/fields/PRODUCT_SUPPLIER__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_SUPPLIER__c</fullName>
    <label>Product Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>