force-app/main/default/objects/DWProduct__c/fields/SOURCED_FROM_DW__c.field-meta.xml
<CustomField>
    <fullName>SOURCED_FROM_DW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sourced From DW</label>
    <type>Checkbox</type>
</CustomField>