force-app/main/default/objects/DWProduct__c/fields/SYS_CREATED__c.field-meta.xml
<CustomField>
    <fullName>SYS_CREATED__c</fullName>
    <label>SYS_CREATED</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>