force-app/main/default/objects/DWProduct__c/fields/SYS_DUMMY_IND__c.field-meta.xml
<CustomField>
    <fullName>SYS_DUMMY_IND__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SYS_DUMMY_IND</label>
    <type>Checkbox</type>
</CustomField>