force-app/main/default/objects/DWProduct__c/fields/SYS_UPDATED__c.field-meta.xml
<CustomField>
    <fullName>SYS_UPDATED__c</fullName>
    <label>SYS_UPDATED</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>