force-app/main/default/objects/DWProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ITEM__c</columns>
    <columns>ITEM_DESCRIPTION__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Custom_Supplier__c</columns>
    <columns>Custom_Family__c</columns>
    <columns>PRODUCT_KEY__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>steve</value>
    </filters>
    <filters>
        <field>Custom_Family__c</field>
        <operation>equals</operation>
        <value>Yeast</value>
    </filters>
    <label>All</label>
</ListView>